teste link sem pasta no inbdex.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <header id="cabecalho">
                 <div id="logo-topo">
-                        <img src="_imagens/logo_tenneco_peq.png" height="38px" width="200px" alt="">
+                        <img src="logo_tenneco_peq.png" height="38px" width="200px" alt="">
 
                 </div><!--logo-topo"-->
 
