removido _ no inicio nome pastas

--- a/sapta2mcm_info.html
+++ b/sapta2mcm_info.html
@@ -271,7 +271,7 @@ background-color: rgba(255, 255, 0, 0.2);
 
         <header id="cabecalho">
                 <div id="logo-topo">
-                        <img src="_imagens/logo_tenneco_peq.png" height="38px" width="200px" alt="">
+                        <img src="imagens/logo_tenneco_peq.png" height="38px" width="200px" alt="">
 
                 </div><!--logo-topo"-->
 
@@ -327,14 +327,14 @@ background-color: rgba(255, 255, 0, 0.2);
 
                 <h2>2. Fluxo das atvidades:</h2>
                 <p>O fluxograma ilustrado na imagem abaixo, representa a sequencia das atividades necessárias em cada setor para que as modificação <strong>MM</strong> possam ser implementadas na manufatura, ou seja, no SAP/TA2.</p>
-                <img src="_imagens/WF_TA2.png" height="1253px" width="500px" alt="">
+                <img src="imagens/WF_TA2.png" height="1253px" width="500px" alt="">
 
                 <div class="nomenclatura_wf">
                 <table>
-                    <tr><td><img src="_imagens/sapta2_mcm_nivel.png" height="26px" width="50px" alt=""></td><td>Representa o início de cada nível de aprovação.</td></tr>
-                    <tr><td><img src="_imagens/sapta2_mcm_aprov_fixos.png" height="50px" width="50px" alt=""></td><td>Setor fixo, independe do tipo de material.</td></tr>
-                    <tr><td><img src="_imagens/sapta2_mcm_aprov_opt.png" height="50px" width="50px" alt=""></td><td>Setor opcional, depende do tipo de material.</td></tr>
-                    <tr><td><img src="_imagens/sapta2_mcm_analise.png" height="50px" width="50px" alt=""></td><td>Analise do tipo de material e status do programa.</td></tr>
+                    <tr><td><img src="imagens/sapta2_mcm_nivel.png" height="26px" width="50px" alt=""></td><td>Representa o início de cada nível de aprovação.</td></tr>
+                    <tr><td><img src="imagens/sapta2_mcm_aprov_fixos.png" height="50px" width="50px" alt=""></td><td>Setor fixo, independe do tipo de material.</td></tr>
+                    <tr><td><img src="imagens/sapta2_mcm_aprov_opt.png" height="50px" width="50px" alt=""></td><td>Setor opcional, depende do tipo de material.</td></tr>
+                    <tr><td><img src="imagens/sapta2_mcm_analise.png" height="50px" width="50px" alt=""></td><td>Analise do tipo de material e status do programa.</td></tr>
                 </table></div>
             
 
