--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -7,7 +7,7 @@
     <title>Tenneco Clean Air - South America Engineering</title>
 
     <link href="css/estilo.css" rel="stylesheet" type="text/css" />
-    <script language="javascript" src="_javascript/funcoes_ta2.js">
+    <script language="javascript" src="javascript/funcoes_ta2.js">
     </script>
  <!--   <link href="../site_eng/css/reset.css" rel="stylesheet" type="text/css" />-->
 
