--- a/sapta2mcm_desc.html
+++ b/sapta2mcm_desc.html
@@ -353,7 +353,7 @@ div.itens-alterados {
             <textarea style="width: 84px; height: 100px; font-size: 10pt; margin: 5px auto 5px 1px; resize:none" placeholder="Usado em: MM"></textarea>
             </div>
 
-        <div style="background-color: rgb(145, 255, 0); padding: 10px; width: 100%; display: none;">
+        <div style="background-color: rgb(145, 255, 0); padding: 10px; width: 100%;">
             <h3 style="text-align: center;">Autorização de Modificação</h3>
             
             <form>
