updated js ta2 desc

--- a/sapta2mcm_desc.html
+++ b/sapta2mcm_desc.html
@@ -366,7 +366,7 @@ div.itens-alterados {
                 
                 <table>
                     <tr id="ADM_linha_titulo">
-                        <td><input type="checkbox" name="" id="ADM_BOM"><label for="ADM_BOM">BOM</label></td>
+                        <td><input type="checkbox" name="" id="ADM_BOM"><label for="ADM_BOM">BOM</label><input id="ADM_BOM_date" type="date"></td>
                         <td class="ADM_tipo"><input type="checkbox" name="" id="ADM_Notas"><label for="ADM_Notas">Notas</label></td>
                         <td class="ADM_tipo"><input type="checkbox" name="" id="ADM_Tolerancia"><label for="ADM_Tolerancia">Tolerância</label></td>
                         <td class="ADM_tipo"><input type="checkbox" name="" id="ADM_Outros"><label for="ADM_Outros">Outros</label></td>
