--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -239,7 +239,8 @@ fieldset#itemtype {
                                 <option value="" selected style="display: none;"></option>
                                 <optgroup label="LV">
                                     <option value="VW">VOLKSWAGEN</option>
-                                    <option value="FRD">FORD</option>
+                                    <option value="FRM">FORD (MOGI MIRIM)</option>
+                                    <option value="FRC">FORD (CAMAÇARI)</option>
                                     <option value="GMB">GENERAL MOTORS</option>
                                     <option value="FCA">FIAT</option>
                                     <option value="PSA">PSA</option>
@@ -259,6 +260,7 @@ fieldset#itemtype {
                                     <option value="CNH">CNH</option>
                                     <option value="MWM">MWM</option>
                                     <option value="VOL">VOLVO</option>
+                                    <option value="ARG">ARGENTINA</option>
                                     <option value="TEN">TENNECO</option>
                                 </optgroup>
                             </select></br>
@@ -359,6 +361,8 @@ fieldset#itemtype {
                 <li id="CLEYALVE">CLEYTON ALVES</li>
                 <li id="CARLMART">CARLOS MARTINS</li>
                 <li id="ELTONOGU">ELTON NOGUEIRA</li>
+                <li id="LIBERF72">FABIO LIBERTINI</li>
+                <li id="WELLDESO">WELLINGTON DE SOUZA</li>
                 <li id="ROMUMART">ROMULO MARTINS</li>
                 <li id="ANDRROSA">ANDRE ROSA</li>
                 <li id="DIOGBOVE">DIOGO BOVELONI</li>
@@ -369,16 +373,20 @@ fieldset#itemtype {
                 <li id="CARLSOUS">CARLOS DE SOUSA</li>
                 <li id="SEBAREZE">MAURICIO REZENDE</li>
                 <li id="LUCEPOLL">LUCELIA POLLETTINI</li>
+                <li id="X1LUCAS1">LUCAS SOUZA</li>
                 <li id="CELIINNO">CELIA INNOCENTE</li>
-                <li id="GIULSILV">GUILHERME SILVA</li>
+                <li id="GIULSILV">GIULIANO SILVA</li>
                 <li id="SIDNSILV">SIDNEY DA SILVA</li>
                 <li id="GLEIDARO">GLEIDSON ROSA</li>
                 <li id="PALORIB1">PALOMA RIBEIRO</li>
                 <li id="EVERROSA">EVERI ROSADA</li>
+                <li id="CONSTR63">RODRIGO CONSTANTINO</li>
                 <li id="RODRCHA1">RODRIGO CHAVES</li>
                 <li id="FLAVDOMI">FLAVIO DOMINGUES</li>
                 <li id="DENIALVE">DENISE ALVES</li>
                 <li id="X1GABRFA">GABRIELA FACHIN</li>
+                <li id="DOSSAC98">CAMILA DOS SANTOS</li>
+                <li id="CIRINA77">ALINE CIRINO</li>
 
             </ul>
             
