SAP/TA2/DESCRICAO 2021.08.27

--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -167,7 +167,7 @@ fieldset#MCMDescription {
     display: block;
     float: right;
     width: 340px;
-    height: 410px;
+    height: 570px;
     margin-bottom: 20px;
     background-color: rgba(255, 255, 0, 0.2);
 }
@@ -280,9 +280,9 @@ fieldset#MCMDescription {
                             </select></br>
 
                             <input type="radio" name="tTipo-ecm" id="cTipo-ecm" value="" checked style="display: none;">
-                            <input type="radio" name="tTipo-ecm" id="NP" value="Nova Produção."/><label class="legenda-radio" for="NP">NP</label>
-                            <input type="radio" name="tTipo-ecm" id="ADM" value="Autorização de Modificação."/><label class="legenda-radio" for="ADM">ADM</label>
-                            <input type="radio" name="tTipo-ecm" id="ADMBOM" value="Autorização de Modificação (BOM)."/><label class="legenda-radio" for="ADMBOM">ADM (BOM)</label><br>
+                            <input type="radio" name="tTipo-ecm" id="NP" value="Nova Produção"/><label class="legenda-radio" for="NP">NP</label>
+                            <input type="radio" name="tTipo-ecm" id="ADM" value="Autorização de Modificação"/><label class="legenda-radio" for="ADM">ADM</label>
+                            <input type="radio" name="tTipo-ecm" id="ADMBOM" value="Autorização de Modificação (BOM)"/><label class="legenda-radio" for="ADMBOM">ADM (BOM)</label><br>
 
                             <div class="itemChanged_nvis" id="div_tipoSubstituido">
 
@@ -417,7 +417,7 @@ fieldset#MCMDescription {
 
             <fieldset id="resumo_final"><legend class="legenda">Resumo</legend>
                 <div id="resumo_final_div" style="width: 320px;text-align: center;"></div>
-                <div id="ResumoDescricao" style="width: 320px;text-align: center;">
+                <div id="ResumoDescricao" style="width: 320px;text-align: left; font-size: 10pt;">
                     Documento criado por: Fabio Costa.<br>
                     <br>
                     PROJETO: GENERAL MOTORS, Cold End, STRALIS - TENPLus.<br>
