--- a/sapplpecm_desc.html
+++ b/sapplpecm_desc.html
@@ -176,6 +176,7 @@ button.botao {
                     <li id="lista-segundo">Catalisador</li>
             </ul>
         </nav>
+        <p style="font-size: 9pt;font-style: italic;margin-right: 15px;text-align: right;">Atualizado em 29 de Agosto de 2021<br>Por Marcelo Pupo</p>
 
         </section>
 
@@ -201,7 +202,7 @@ button.botao {
                 <td class="coluna-titulo" rowspan="2">Programa</td>
                 <td class="coluna-opcao" id="linha03">
                     <select style="margin-left: 8px;" class="select-maior" name="tCliente" id="cCliente">
-                        <option value="" selected style="display: none;"></option>
+                        <option value="" selected style="display: none;">Selecione o cliente</option>
                         <optgroup label="LV">
                             <option value="VW">VOLKSWAGEN</option>
                             <option value="FRD">FORD</option>
@@ -239,7 +240,7 @@ button.botao {
             <tr class="linha-par">
                 <td class="coluna-opcao" id="linha04">
                     <select style="margin-left: 8px;" class="select-maior" name="tProduto" id="cProduto">
-                        <option value="" selected style="display: none;"></option>
+                        <option value="" selected style="display: none;">Tipo de Produto</option>
                         <optgroup label="LV">
                             <option value="CE-LV">Cold End</option>
                             <option value="HE-LV">Hot End</option>
