Atualizado Tipo MM

--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -419,10 +419,10 @@ fieldset#MCMDescription {
                                     <optgroup label="COMPRADOS">
                                         <option value="COMPONENTE CONTA PLENA">COMPONENTE CONTA PLENA</option>
                                         <option value="COMPONENTE SUBCONTRATADO">COMPONENTE SUBCONTRATADO</option>
-                                        <option value="COMPONENTE CONTA PLENA">COMPONENTE CONTA PLENA</option>
+                                        <option value="COMPONENTE DIRECT BUY">COMPONENTE DIRECT BUY</option>
                                         <option value="COMPONENTE INTERCOMPANY (ICY)">COMPONENTE INTERCOMPANY (ICY)</option>
+                                        <option value="PGM CONSIGNADO (PASSTHROUGH)">PGM CONSIGNADO (PASSTHROUGH)</option>
                                         <option value="MATERIA PRIMA">MATERIA PRIMA</option>
-                                        <option value="CONSIGNADO PASSTHROUGH">CONSIGNADO PASSTHROUGH</option>
                                         <option value="EMBALAGEM">EMBALAGEM</option>
                                         </optgroup>
                                 </select></div>
