--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -380,18 +380,18 @@ fieldset#MCMDescription {
                             <select class="botao_select" name="tProduto" id="cProduto">
                                 <option value="" selected style="display: none;">Tipo de Produto</option>
                                 <optgroup label="LV">
-                                    <option value="CE-LV">Cold End</option>
-                                    <option value="HE-LV">Hot End</option>
-                                    <option value="DP-LV">Down Pipe</option>
-                                    <option value="CN-LV">Canning</option>
-                                    <option value="CP-LV">Components for LV</option>
+                                    <option value="Light Vehicle (LV)">Cold End</option>
+                                    <option value="Light Vehicle (LV)">Hot End</option>
+                                    <option value="Light Vehicle (LV)">Down Pipe</option>
+                                    <option value="Light Vehicle (LV)">Canning</option>
+                                    <option value="Light Vehicle (LV)">Components for LV</option>
                                 </optgroup>
                                 <optgroup label="CTOH">
-                                    <option value="BX-VI-CTOH">EURO VI - BOX</option>
-                                    <option value="IL-VI-CTOH">EURO VI - IN LINE</option>
-                                    <option value="BX-V-CTOH">EURO V - BOX</option>
-                                    <option value="IL-V-CTOH">EURO V - IN LINE</option>
-                                    <option value="CP-CTOH">Components for CTOH</option>
+                                    <option value="Commercial Truck & Off Highway (CTOH)">EURO VI - BOX</option>
+                                    <option value="Commercial Truck & Off Highway (CTOH)">EURO VI - IN LINE</option>
+                                    <option value="Commercial Truck & Off Highway (CTOH)">EURO V - BOX</option>
+                                    <option value="Commercial Truck & Off Highway (CTOH)">EURO V - IN LINE</option>
+                                    <option value="Commercial Truck & Off Highway (CTOH)">Components for CTOH</option>
                                 </optgroup>
                                     <option value="Others">Outros</option>
                             </select>
