Revised MAN to VWCO

--- a/sapplpecm_desc.html
+++ b/sapplpecm_desc.html
@@ -247,7 +247,7 @@ button.botao {
                                 <option value="DAI">MERCEDES BENZ</option>
                                 <option value="SCN">SCANIA</option>
                                 <option value="IVE">IVECO</option>
-                                <option value="MAN">MAN</option>
+                                <option value="VWCO">VWCO</option>
                                 <option value="CAO">CAOA</option>
                                 <option value="CNH">CNH</option>
                                 <option value="MWM">MWM</option>
