--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -269,7 +269,7 @@ fieldset#MCMDescription {
                             <select class="botao_select" name="tCliente" id="cCliente">
                                 <option value="" selected style="display: none;">Selecione o cliente</option>
                                 <optgroup label="LV">
-                                    <option value="VW">VOLKSWAGEN</option>
+                                    <option value="VWL">VOLKSWAGEN</option>
                                     <option value="GMB">GENERAL MOTORS</option>
                                     <option value="FCA">FIAT</option>
                                     <option value="PSA">PSA</option>
@@ -286,7 +286,7 @@ fieldset#MCMDescription {
                                     <option value="DAI">MERCEDES BENZ</option>
                                     <option value="SCN">SCANIA</option>
                                     <option value="IVE">IVECO</option>
-                                    <option value="MAN">MAN</option>
+                                    <option value="VWC">VWCO</option>
                                     <option value="CAO">CAOA</option>
                                     <option value="CNH">CNH</option>
                                     <option value="MWM">MWM</option>
